--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.thymeleaf.cache=false
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nguyenhoangphuc020803@gmail.com
+spring.mail.password=xvji fyaa shzw ukqh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
