--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ktx_management
-spring.datasource.url=jdbc:mysql://localhost:3306/ktx_management?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ktx_management
 spring.datasource.username=root
 spring.datasource.password=root
 
